# space-cowboys

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  vcpkg.json
.github/workflows/: clang-format.yml  cmake.yml  github-actions.yml
src/: main.cc  main.cpp  test.cpp
src/components/: physics.h  sprite.h  transform.h
src/ecs/: ecs.cc  ecs.h  ecs_interface.h  engine.h
src/ecs/components/: ai.h  collider.h  physics.h  sprite.h  timer.h  transform.h
src/ecs/pools/: bullet_pool.h  bullets.h  pool.cc  pool.h
src/ecs/pools/aliens/: aliens.cc  aliens.h
src/ecs/pools/bullets/: bullets.cc  bullets.h
src/ecs/pools/explosions/: explosions.cc  explosions.h
src/ecs/pools/particles/: particles.cc  particles.h
src/ecs/pools/tanks/: tanks.cc  tanks.h
src/ecs/pools/zappers/: zappers.cc  zappers.h
src/ecs/systems/: bullet_system.h  check_bullet_hit.h  choose_alien_direction.h  movement.h  process_input.h  process_tank_input.h  render_collider.h  render_sprite.h  resolve_alien_collision.h  resolve_bullet_collision.h  resolve_bullet_hit.h  square.h  update_alien_position.h  update_bullet_position.h  update_position.h  update_tank_position.h
src/ecs/systems/alien/: alien_system.cc  alien_system.h
src/ecs/systems/input_ai/: input_ai.cc  input_ai.h
src/ecs/systems/input_player/: input_player.cc  input_player.h
src/ecs/systems/process_input/: process_input.cc  process_input.h
src/ecs/systems/render_collider/: render_collider.cc  render_collider.h
src/ecs/systems/render_sprite/: render_sprite.cc  render_sprite.h
src/ecs/systems/tank/: tank_system.cc  tank_system.h
src/ecs/systems/update_ai/: update_ai.cc  update_ai.h
src/ecs/systems/update_aliens/: update_aliens.cc  update_aliens.h
src/ecs/systems/update_effects/: update_effects.cc  update_effects.h
src/ecs/systems/update_hit/: update_hit.cc  update_hit.h
src/ecs/systems/update_particle/: update_particle.cc  update_particle.h
src/ecs/systems/update_position/: update_position.cc  update_position.h
src/ecs/systems/update_tanks/: update_tanks.cc  update_tanks.h
src/entities/: entities.cc  entities.h
src/game/: game.cc  game.cpp  game.h  game.hpp  game.test.cpp
src/game/components/: physics.h
src/game/systems/: square.h
src/game_object/: game_object.cc  game_object.h
src/game_object/components/: graphics_component.h  input_component.h  physics_component.h  render_component.h  update_component.h
src/hello/: hello.hpp  hello.test.cpp
src/old_ecs/: ecs.h
src/old_ecs/components/: active.h  ai.h  sprite.h  transform.h
src/old_ecs/pools/: bullet_pool.h
src/old_ecs/systems/: choose_alien_direction.h  process_tank_input.h  render_collider.h  resolve_bullet_hit.h  update_alien_position.h  update_bullet_position.h
src/service/logger/debug_logger/: debug_logger.h
src/service/logger/release_logger/: release_logger.cc  release_logger.h
src/services/: locator.cc  locator.cpp  locator.h  locator.hpp
src/services/logger/: logger.hpp
src/services/logger/debug_logger/: debug_logger.cc  debug_logger.cpp  debug_logger.h  debug_logger.hpp
src/services/logger/release_logger/: release_logger.cpp  release_logger.h  release_logger.hpp
src/services/logging/: debug_logging.cpp  debug_logging.hpp  logging.hpp
src/services/logging/debug_logging/: debug_logging.cpp  debug_logging.hpp
src/services/logging/null_logging/: null_logging.cpp  null_logging.hpp
src/services/logging/release_logging/: release_logging.cpp  release_logging.hpp
src/systems/: movement.h  render_sprite.h  square.h  update_position.h
src/tank/: tank.cc  tank.h  tank_graphics_component.h  tank_input_component.h  tank_physics_component.h  tank_render_component.h  tank_update_component.h
src/texture/: texture.cc  texture.h
src/types/: types.h
src/utilities/: utilities.h
src/utilities/vector_2/: vector_2.cc
src/utils/: utils.cc  utils.h
src/vec2/: vec2.cc  vec2.h  vec2.test.cc
src/vec_2/: vec_2.cc  vec_2.test.cc
src/vector2/: vector2.cc  vector2.h  vector2.test.cc
src/vector_2/: vector_2.cc  vector_2.h  vector_2.test.cc
src/world/: world.cc  world.h
tools/: ClangFormat.cmake
